fix: fix collapse icon to center it when side nav is collapsed

--- a/src/components/ai/aiSidedrawer/aiSideDrawer.scss
+++ b/src/components/ai/aiSidedrawer/aiSideDrawer.scss
@@ -18,6 +18,11 @@
   min-height: 0;
 }
 
+:host([collapsed]) .ai-button {
+  display: flex;
+  justify-content: center;
+}
+
 /* MAIN COLUMN LAYOUT */
 .side-nav {
   height: 100%;
